--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 node {
     stage('Clone code') {
-        git 'https://github.com/vasyafomiuk/demo-project.git'
+        git 'https://github.com/tnas0/demo-project.git'
     }
         
     stage('Run tests'){
